Corrected syntax error in default.twig

--- a/default.twig
+++ b/default.twig
@@ -66,7 +66,7 @@
                     {{widget('content', 'footercolumn1', {"content":"<p>Uvitae sagittis © 2013. Placerat ac Nulla.</p>"})|raw}}
                 </div>
                 <div class="column columns-two-right">
-                    {{widget('content', 'footercolumn1', {"content":"<p>Lorem ipsum dolor sit amet consectetur.</p>})|raw}}
+                    {{widget('content', 'footercolumn1', {"content":"<p>Lorem ipsum dolor sit amet consectetur.</p>"})|raw}}
                 </div>
             </div>
         </div>
