--- a/default.twig
+++ b/default.twig
@@ -20,14 +20,16 @@
                 {{widget('content', 'footercolumn1', {"content":"<h3>Lorem &amp; Ipsodium</h3><p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor nunc vellain livamus.</p><p><a>Lorem ipsum.</a></p>"})|raw}}
             </div>
             <div class="column columns-three-middle">
-                {{widget('content', 'footercolumn1', {"content":"<h3>Lorem &amp; Ipsodium</h3><p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor nunc vellain livamus.</p><p><a>Lorem ipsum.</a></p>"})|raw}}
+                {{widget('content', 'footercolumn2', {"content":"<h3>Lorem &amp; Ipsodium</h3><p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor nunc vellain livamus.</p><p><a>Lorem ipsum.</a></p>"})|raw}}
             </div>
             <div class="column columns-three-right">
-                {{widget('content', 'footercolumn1', {"content":"<h3>Lorem &amp; Ipsodium</h3><p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor nunc vellain livamus.</p><p><a>Lorem ipsum.</a></p>"})|raw}}
+                {{widget('content', 'footercolumn3', {"content":"<h3>Lorem &amp; Ipsodium</h3><p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor nunc vellain livamus.</p><p><a>Lorem ipsum.</a></p>"})|raw}}
             </div>
         </div>
 
-        {{zone('main')|raw}}
+        <div class="main">
+            {{zone('main')|raw}}
+        </div>
 
     </div>
 </section>
@@ -39,7 +41,7 @@
                 {{widget('content', 'footercolumn1', {"content":"<h2>Aliquam sodales urna lipsum.</h2><p>Ut urna ipsum pulvinar vitae sagittis in placerat ac nulla.</p>"})|raw}}
             </div>
             <div class="column columns-two-right">
-                {{widget('content', 'footercolumn1', {"content":"<h2>Consectetur adipiscing elit.</h2><p>Aliquam sodales urna non odio egestas tempor alam ipsum so.</p>"})|raw}}
+                {{widget('content', 'footercolumn2', {"content":"<h2>Consectetur adipiscing elit.</h2><p>Aliquam sodales urna non odio egestas tempor alam ipsum so.</p>"})|raw}}
             </div>
         </div>
     </div>
@@ -66,7 +68,7 @@
                     {{widget('content', 'footercolumn1', {"content":"<p>Uvitae sagittis © 2013. Placerat ac Nulla.</p>"})|raw}}
                 </div>
                 <div class="column columns-two-right">
-                    {{widget('content', 'footercolumn1', {"content":"<p>Lorem ipsum dolor sit amet consectetur.</p>"})|raw}}
+                    {{widget('content', 'footercolumn2', {"content":"<p>Lorem ipsum dolor sit amet consectetur.</p>"})|raw}}
                 </div>
             </div>
         </div>
