--- a/default.twig
+++ b/default.twig
@@ -10,20 +10,20 @@
 </header>
 
 <section>
-    {{widget('feature', 'featurehome', {"header": "Point of interest marketing.", "strapline":"Ut urna ipsum pulvinar vitae sagittis in placerat ac nulla.", "buttonText":"LORE IPSU", "bgImg": asset('images/feature-bg.jpg')})|raw}}
+    {{widget('feature', 'featurehome', {"header": "Point of interest marketing.", "strapline":"Ut urna ipsum pulvinar vitae sagittis in placerat ac nulla.", "buttonText":"LORE IPSUM", "bgImg": asset('images/feature-bg.jpg')})|raw}}
 </section>
 
 <section>
     <div class="wrapper clearfix">
-        <div class="widget responsivecolumns columns-two-50-50 columns-three-33-34-33">
+        <div class="widget responsivecolumns columns-three-33-34-33">
             <div class="column columns-three-left">
-                {{widget('content', 'footercolumn1', {"content":"<h3>Lorem &amp; Ipsodium</h3><p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor nunc vellain livamus.</p><p><a>Lorem ipsum.</a></p>"})|raw}}
+                {{widget('content', 'introcolumn1', {"content":"<h3>Lorem &amp; Ipsodium</h3><p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor nunc vellain livamus.</p><p><a>Lorem ipsum.</a></p>"})|raw}}
             </div>
             <div class="column columns-three-middle">
-                {{widget('content', 'footercolumn2', {"content":"<h3>Lorem &amp; Ipsodium</h3><p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor nunc vellain livamus.</p><p><a>Lorem ipsum.</a></p>"})|raw}}
+                {{widget('content', 'introcolumn2', {"content":"<h3>Lorem &amp; Ipsodium</h3><p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor nunc vellain livamus.</p><p><a>Lorem ipsum.</a></p>"})|raw}}
             </div>
             <div class="column columns-three-right">
-                {{widget('content', 'footercolumn3', {"content":"<h3>Lorem &amp; Ipsodium</h3><p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor nunc vellain livamus.</p><p><a>Lorem ipsum.</a></p>"})|raw}}
+                {{widget('content', 'introcolumn3', {"content":"<h3>Lorem &amp; Ipsodium</h3><p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor nunc vellain livamus.</p><p><a>Lorem ipsum.</a></p>"})|raw}}
             </div>
         </div>
 
@@ -38,10 +38,10 @@
     <div class="wrapper clearfix">
         <div class="widget responsivecolumns columns-two-50-50">
             <div class="column columns-two-left">
-                {{widget('content', 'middlecontent1', {"content":"<h2>Aliquam sodales urna lipsum.</h2><p>Ut urna ipsum pulvinar vitae sagittis in placerat ac nulla.</p>"})|raw}}
+                {{widget('content', 'bottomcontent1', {"content":"<h2>Aliquam sodales urna lipsum.</h2><p>Ut urna ipsum pulvinar vitae sagittis in placerat ac nulla.</p>"})|raw}}
             </div>
             <div class="column columns-two-right">
-                {{widget('content', 'middlecontent2', {"content":"<h2>Consectetur adipiscing elit.</h2><p>Aliquam sodales urna non odio egestas tempor alam ipsum so.</p>"})|raw}}
+                {{widget('content', 'bottomcontent2', {"content":"<h2>Consectetur adipiscing elit.</h2><p>Aliquam sodales urna non odio egestas tempor alam ipsum so.</p>"})|raw}}
             </div>
         </div>
     </div>
@@ -49,7 +49,7 @@
 
 <footer>
     <div class="wrapper clearfix">
-        <div class="widget responsivecolumns columns-two-50-50 columns-three-33-34-33">
+        <div class="widget responsivecolumns columns-three-33-34-33">
            <div class="column columns-three-left">
                 {{widget('content', 'footercolumn1', {"content":"<h3>Lorem &amp; Ipsodium</h3><p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor nunc vellain livamus.</p><p><a>Lorem ipsum.</a></p>"})|raw}}
            </div>
@@ -66,10 +66,10 @@
         <div class="wrapper clearfix">
             <div class="widget responsivecolumns columns-two-50-50">
                 <div class="column columns-two-left">
-                    {{widget('content', 'footercolumn1', {"content":"<p>Uvitae sagittis © 2013. Placerat ac Nulla.</p>"})|raw}}
+                    {{widget('content', 'footer2column1', {"content":"<p>Uvitae sagittis © 2013. Placerat ac Nulla.</p>"})|raw}}
                 </div>
                 <div class="column columns-two-right">
-                    {{widget('content', 'footercolumn2', {"content":"<p>Lorem ipsum dolor sit amet consectetur.</p>"})|raw}}
+                    {{widget('content', 'footer2column2', {"content":"<p>Lorem ipsum dolor sit amet consectetur.</p>"})|raw}}
                 </div>
             </div>
         </div>
