--- a/stylesheet.less
+++ b/stylesheet.less
@@ -19,6 +19,7 @@ a {
 
 a:hover {
   text-decoration: underline;
+  cursor: pointer;
 }
 
 h2, h3, h4, h5, p {
@@ -702,7 +703,7 @@ footer section.footer2 .widget.responsivecolumns .columns-two-right {
 
 .widget.feature .content {
     width: 100%;
-    position: absolute!important;
+    /*position: absolute!important;*/
     bottom: 0;
     background: hsla(hue(@color-swatch2), saturation(@color-swatch2), lightness(@color-swatch2), 0.8);  
     padding: 1.8em 0;
