--- a/default.twig
+++ b/default.twig
@@ -53,10 +53,10 @@
            <div class="column columns-three-left">
                 {{widget('content', 'footercolumn1', {"content":"<h3>Lorem &amp; Ipsodium</h3><p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor nunc vellain livamus.</p><p><a>Lorem ipsum.</a></p>"})|raw}}
            </div>
-           <div class="column columns-three-second">
+           <div class="column columns-three-middle">
                 {{widget('content', 'footercolumn2', {"content":"<h3>Lorem &amp; Ipsodium</h3><p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor nunc vellain livamus.</p><p><a>Lorem ipsum.</a></p>"})|raw}}
            </div>
-           <div class="column columns-three-third">
+           <div class="column columns-three-right">
                 {{widget('content', 'footercolumn3', {"content":"<h3>Lorem &amp; Ipsodium</h3>"})|raw}}
                 {{widget('companyaddress', 'companyaddressfooter', {})|raw}}    
            </div>
