--- a/stylesheet.less
+++ b/stylesheet.less
@@ -641,7 +641,7 @@ footer section.footer2 .widget.responsivecolumns .columns-two-right {
   color: @color-swatch3;
 }
 
-.widget.extendednavigation ul li a {
+.widget.extendednavigation ul li a, .widget.extendednavigation ul li .text {
   display: block;
   padding: 1em 2em;
   font-family: @font-swatch6-font-family;
