--- a/stylesheet.less
+++ b/stylesheet.less
@@ -110,6 +110,10 @@ blockquote {
   padding: 0px 0 60px;
 }
 
+.icon {
+  margin-right: 4px;
+}
+
 section.bottom-bar {
   width: 100%;
   background-color: lighten(@color-swatch5,23%);
@@ -506,9 +510,9 @@ footer section.footer2 .widget.responsivecolumns p {
   padding: 10px 0 0; 
 }
 
-footer section.footer2 .widget.responsivecolumns .columns-two-right {
+/*footer section.footer2 .widget.responsivecolumns .columns-two-right {
   text-align: right;
-}
+}*/
 
 /* Navigation CSS */
 /*
@@ -1101,11 +1105,15 @@ footer section.footer2 .widget.responsivecolumns .columns-two-right {
     padding: 1em;
   }
 
+  .widget.extendednavigation ul li.folder .text {
+    padding: 1em 1.4em;
+  }
+
   .widget.extendednavigation li:hover > ul {
     border-top: 1px solid @color-swatch5;
     padding: 0px 0 0;
     width: auto;
-    margin-left: 5px;
+    margin-left: 0;
   }
 
   .widget.extendednavigation li:hover > ul li {
