--- a/default.twig
+++ b/default.twig
@@ -69,7 +69,7 @@
                     {{widget('content', 'footer2column1', {"content":"<p>Uvitae sagittis © 2013. Placerat ac Nulla.</p>"})|raw}}
                 </div>
                 <div class="column columns-two-right">
-                    {{widget('content', 'footer2column2', {"content":"<p style="text-align: right;">Lorem ipsum dolor sit amet consectetur.</p>"})|raw}}
+                    {{widget('content', 'footer2column2', {"content":'<p style="text-align: right;">Lorem ipsum dolor sit amet consectetur.</p>'})|raw}}
                 </div>
             </div>
         </div>
