--- a/stylesheet.less
+++ b/stylesheet.less
@@ -169,8 +169,7 @@ section.light-bg {
   background-color: @color-swatch2;
   color: @color-swatch4;
   text-decoration: none;
-  text-transform: uppercase;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
 }
 
 .widget.button button:hover 
@@ -524,91 +523,91 @@ footer section.footer2 .widget.responsivecolumns p {
 */
 
 .widget.navigation {
-    margin: 0;
+
 }
 
-.widget.navigation .navigation {
-    width: 100%;
+.widget.navigation ul {
+  float: left;
+  padding: 0;
+  margin: 0;
 }
 
-.widget.navigation ul
-{
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    list-style: none outside none;
-    margin: 0;
-    overflow-x: hidden;
-    overflow-y: auto;
-    padding: 0;
-}
 .widget.navigation ul.align-center li
 {
-    text-align: center;
+  text-align: center;
 }
 
-.widget.navigation ul.align-left
+.widget.navigation ul.align-left li
 {
-    text-align: center;
+  text-align: left;
 }
 
 .widget.navigation ul.align-right li
 {
-    text-align: right; 
+  text-align: right;
 }
 
-.widget.navigation ul li 
-{
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    display: block;
-    list-style: none;
-    width: 100%;
-    border-top: 1px solid @color-swatch2;
-
-    /* fonts */
-    font-family:@font-swatch6-font-family;
-    font-size:@font-swatch5-font-size;
-    letter-spacing: @font-swatch6-letter-spacing;
-    color: @font-swatch6-color;
-}
-.widget.navigation ul li a
-{
-    display: block;
-    padding: 16px 20px;
-    color: lighten(@color-swatch4,20%);
-    font-weight: @font-swatch6-font-weight;
-    text-decoration: none;
+.widget.navigation ul li {
+  float: left;
+  display: block;
 }
 
-.navigation ul li:last-child
-{
-    border-right: none;
-    border-bottom: 1px solid @color-swatch2;
-
+.widget.navigation ul li:hover {
+  color: @color-swatch3;
 }
 
-.navigation.nm-3-tabs ul li:last-child, .navigation.nm-4-tabs ul li:last-child
-{
-    border-bottom: none;
-    border-top: none;
+.widget.navigation ul li a, .widget.extendednavigation ul li.folder .text {
+  display: block;
+  padding: 1em 2em;
+  font-family: @font-swatch6-font-family;
+  font-size: @font-swatch6-font-size;
+  color: darken(@color-swatch5,10%);
+}
+.widget.navigation ul li a:hover {
+  text-decoration: none;
 }
 
-.widget.navigation ul li:hover
-{
-    background-color: @color-swatch2;
-    background-image: none;
-    cursor: pointer;
-    border-top: 1px solid darken(@color-swatch1,10%);
+.widget.navigation ul li.folder {
+  background-image: image('/4494193fb5713a0a8717442ba3249899/images/arrow-down.png');
+  background-position: right center;
+  background-repeat: no-repeat;
+  height: 100%;
+  cursor: pointer;
 }
 
-.widget.navigation ul li:hover a
-{
+.widget.navigation li a:hover {
+  color: @color-swatch3;
 }
 
-.widget.navigation.nm-buttons ul li {
-    border: 1px solid #eee;
+.widget.navigation li > ul {
+  display: none;
+}
+.widget.navigation li:hover > ul {
+  display: block;
+  width: 180px;
+  position: absolute;
+  z-index: 500;
+  background-color: @color-swatch4;
+  padding-top: 42px;
+  padding-bottom: 10px;
+  border-top: none;
+  border-bottom: 4px solid @color-swatch3;
+}
+.widget.navigation li:hover > ul > li {
+  display: block;
+  width: 100%;
+  text-align: left;
+}
+
+.widget.navigation li:hover > ul > li > a {
+  display: block;
+  background-image: none;
+  color: @color-swatch5;
+  padding: 0;
+}
+
+.widget.navigation li:hover > ul > li > a:hover {
+  color: @color-swatch3;
 }
 
 /* EXTENDED NAV */
@@ -714,7 +713,7 @@ footer section.footer2 .widget.responsivecolumns p {
 
 .widget.feature .content {
     width: 100%;
-    /*position: absolute!important;*/
+    position: absolute;
     bottom: 0;
     background: hsla(hue(@color-swatch2), saturation(@color-swatch2), lightness(@color-swatch2), 0.8);  
     padding: 1.8em 0;
@@ -814,17 +813,20 @@ footer section.footer2 .widget.responsivecolumns p {
 }
 
 .widget.twitter a {
-   color: @color-swatch4;
-   font-size:@font-swatch5-font-size;
-   text-decoration: none;
+  font-family:@font-swatch2-font-family;
+  font-size:@font-swatch5-font-size;
+  font-weight:@font-swatch5-font-weight;
+  color:@color-swatch2;
+  text-decoration: none;
 }
 
 .widget.twitter a:hover {
     text-decoration: underline;
+    cursor: pointer;
 }
 
 .widget.twitter ul {
-    padding: 20px;
+    padding: 0;
     margin: 0;
 }
 
@@ -847,9 +849,11 @@ footer section.footer2 .widget.responsivecolumns p {
 }
 
 .widget.twitter .twitter-content span.bk-full-name {
-    font-family: @font-swatch4-font-family;
-    color: @color-swatch3;
-    font-weight: bold;
+    font-family:@font-swatch2-font-family;
+    font-size: 15px;
+    font-weight:@font-swatch5-font-weight;
+    color:@color-swatch2;
+    text-decoration: none;
 }
 
 .widget.twitter .twitter-content bk-full-name p {
@@ -894,7 +898,7 @@ footer section.footer2 .widget.responsivecolumns p {
     font-size: @font-swatch5-font-size;
     color: @font-swatch5-color;
     background-color: lighten(@color-swatch2,50%);
-    background-image: image('/hatch/images/form-bg.png');
+    background-image: image('/4494193fb5713a0a8717442ba3249899/images/form-bg.png');
     background-repeat: repeat;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
@@ -912,7 +916,7 @@ footer section.footer2 .widget.responsivecolumns p {
     font-size: @font-swatch5-font-size;
     color: @font-swatch5-color;
     background-color: lighten(@color-swatch2,50%);
-    background-image: image('/hatch/images/form-bg.png');
+    background-image: image('/4494193fb5713a0a8717442ba3249899/images/form-bg.png');
     background-repeat: repeat;
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
@@ -974,15 +978,14 @@ footer section.footer2 .widget.responsivecolumns p {
 
 .widget.tweet {
    padding: 20px 0; 
-   text-align: center;
 }
 
 .widget.tweet a {
-    background-color: darken(@color-swatch1,5%);
+    background-color: lighten(@color-swatch5,23%);
     color: @font-swatch5-color;
-    border: darken(@color-swatch1,10%) solid 1px;
+    border: 1px solid lighten(@color-swatch5,10%);
     padding: 12px 10px 12px 40px;
-    background-image: image('/hatch/images/twitter.png');
+    background-image: image('/4494193fb5713a0a8717442ba3249899/images/twitter.png');
     background-repeat: no-repeat;
     background-position: 10px;
     -moz-border-radius: 6px;
@@ -997,9 +1000,8 @@ footer section.footer2 .widget.responsivecolumns p {
 }
 
 .widget.tweet a:hover, .tweet a:active {
-    background-color: darken(@color-swatch1,10%);
-    border: darken(@color-swatch1,15%) solid 1px;
-    background-image: image('/hatch/images/twitter.png');
+    background-color: lighten(@color-swatch5,15%);
+    background-image: image('/4494193fb5713a0a8717442ba3249899/images/twitter.png');
     background-repeat: no-repeat;
     background-position: 10px;
     cursor: pointer;
@@ -1032,27 +1034,27 @@ footer section.footer2 .widget.responsivecolumns p {
     background-repeat: no-repeat;
 }
 .widget.socialicons span.bk-socialicons-twitter a {
-    background-image: image('/hatch/images/socialicons-twitter.png')
+    background-image: image('/4494193fb5713a0a8717442ba3249899/images/socialicons-twitter.png')
 }
 
 .widget.socialicons span.bk-socialicons-linkedin a {
-    background-image: image('/hatch/images/socialicons-linkedin.png');
+    background-image: image('/4494193fb5713a0a8717442ba3249899/images/socialicons-linkedin.png');
 }
 
 .widget.socialicons span.bk-socialicons-facebook a {
-    background-image: image('/hatch/images/socialicons-facebook.png');
+    background-image: image('/4494193fb5713a0a8717442ba3249899/images/socialicons-facebook.png');
 }
 
 .widget.socialicons span.bk-socialicons-rss a {
-    background-image: image('/hatch/images/socialicons-rssfeed.png');
+    background-image: image('/4494193fb5713a0a8717442ba3249899/images/socialicons-rssfeed.png');
 }
 
 .widget.socialicons span.bk-socialicons-googleplus a {
-    background-image: image('/hatch/images/socialicons-googleplus.png');
+    background-image: image('/4494193fb5713a0a8717442ba3249899/images/socialicons-googleplus.png');
 }
 
 .widget.socialicons span.bk-socialicons-youtube a {
-    background-image: image('/hatch/images/socialicons-youtube.png');
+    background-image: image('/4494193fb5713a0a8717442ba3249899/images/socialicons-youtube.png');
 }
 
 
@@ -1228,6 +1230,11 @@ footer section.footer2 .widget.responsivecolumns p {
 
   .widget.extendednavigation ul.align-right li.folder {
     background-position: 12px center;
+  }
+
+  /* UL ALIGN CENTER */
+  .widget.extendednavigation ul.align-left li:hover ul li {
+    text-align: center;
   }
 
   /* UL ALIGN LEFT */
