--- a/stylesheet.less
+++ b/stylesheet.less
@@ -163,7 +163,7 @@ section.light-bg {
           border-radius: 3px;
   border: 1px solid darken(@color-swatch2,10%);
 
-  font-family: @font-swatch7-font-family;
+  font-family: @font-swatch-font-family;
   font-size: @font-swatch7-font-size;
   font-weight:@font-swatch7-font-weight;
   background-color: @color-swatch2;
@@ -389,7 +389,7 @@ hr.line.align-right {
 .widget.clicktocall {
     background-color: @color-swatch3;
     padding: 16px 10px;
-    margin: 20px;
+    margin: 20px 0;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
@@ -401,12 +401,27 @@ hr.line.align-right {
 }
 
 .widget.clicktocall a {
-    font-family:@font-swatch7-font-family;
-    font-size: @font-swatch7-font-size;
-    color: @font-swatch7-color;
-    text-decoration: none;
-    text-align: center;
-    display: block;
+  background-image: image('/4494193fb5713a0a8717442ba3249899/images/ic-call.png');
+  padding: .4em .6em;
+  margin: 1em 0 1em;
+  -webkit-border-radius: 3px;
+     -moz-border-radius: 3px;
+          border-radius: 3px;
+  border: 1px solid darken(@color-swatch2,10%);
+
+  font-family: @font-swatch-font-family;
+  font-size: @font-swatch7-font-size;
+  font-weight:@font-swatch7-font-weight;
+  background-color: @color-swatch2;
+  color: @color-swatch4;
+  text-decoration: none;
+  letter-spacing: 1px;
+}
+
+.widget.clicktocall a {
+    background-image: image('/4494193fb5713a0a8717442ba3249899/images/ic-call.png');
+    background-color: lighten(@color-swatch2,5%);
+    cursor: pointer;
 }
 
 .widget.clicktocall a.justifyleft
@@ -509,18 +524,7 @@ footer section.footer2 .widget.responsivecolumns p {
   padding: 10px 0 0; 
 }
 
-/*footer section.footer2 .widget.responsivecolumns .columns-two-right {
-  text-align: right;
-}*/
-
-/* Navigation CSS */
-/*
-    Document   : navigation
-    Created on : December 12, 2012, 3:30:52 PM
-    Author     : Dom
-    Description:
-        Navigation modernwhite 
-*/
+/* Standard Navigation */
 
 .widget.navigation {
 
@@ -800,21 +804,15 @@ footer section.footer2 .widget.responsivecolumns p {
     margin-right: 5px;
 }
 
-/* Twitter CSS */
-/* 
-    Document   : twitter
-    Created on : 04-Jul-2012, 14:15:32
-    Author     : Dom
-    Description: Twitter modernwhite
-*/
 
+/* Twitter CSS */
 
 .widget.twitter {
 }
 
 .widget.twitter a {
-  font-family:@font-swatch2-font-family;
-  font-size:@font-swatch5-font-size;
+  font-family:@font-swatch5-font-family;
+  font-size:12px;
   font-weight:@font-swatch5-font-weight;
   color:@color-swatch2;
   text-decoration: none;
@@ -834,7 +832,7 @@ footer section.footer2 .widget.responsivecolumns p {
     border-bottom: none;
     list-style: none;
     font-family: @font-swatch5-font-family;
-    font-size: @font-swatch5-font-size;
+    font-size: 12px;
     color: @font-swatch5-color;
     padding-bottom: 30px;
 }
@@ -856,21 +854,15 @@ footer section.footer2 .widget.responsivecolumns p {
     text-decoration: none;
 }
 
-.widget.twitter .twitter-content bk-full-name p {
-   
+.widget.twitter .twitter-content p {
+   margin-top: 6px;
 }
 
 
 /* Form CSS */
-/* 
-    Document   : Form
-    Created on : 17-Dec-2012, 14:15:32
-    Author     : Dom
-    Description: Form modernwhite
-*/
 
 .widget.contactform form {
-    padding: 20px;
+    padding: 0;
     margin-bottom: 20px;
 }
 
@@ -882,12 +874,13 @@ footer section.footer2 .widget.responsivecolumns p {
 .widget.contactform fieldset label {
     width: 100%;
     float: left;
-    font-family:@font-swatch4-font-family;
+    font-family:@font-swatch1-font-family;
     font-size:@font-swatch4-font-size;
     font-weight:@font-swatch4-font-weight;
     line-height:@font-swatch4-line-height;
-    color:@font-swatch4-color;
-    letter-spacing: @font-swatch5-letter-spacing;
+    color:@color-swatch1;
+    letter-spacing: -1px;
+    margin-bottom: 8px;
 }
 
 .widget.contactform fieldset input {
@@ -906,6 +899,14 @@ footer section.footer2 .widget.responsivecolumns p {
     text-indent: 8px;
     margin-top: 6px;
     margin-bottom: 30px;
+}
+
+.widget.contactform fieldset input.email {
+  background-image: image('/4494193fb5713a0a8717442ba3249899/images/form-ic-email.png');
+}
+
+.widget.contactform fieldset input.message {
+  background-image: image('/4494193fb5713a0a8717442ba3249899/images/form-ic-message.png');
 }
 
 .widget.contactform fieldset textarea {
@@ -929,21 +930,26 @@ footer section.footer2 .widget.responsivecolumns p {
 }
 
 .widget.contactform fieldset button.btn {
-    width: 100%;
-    font-family:@font-swatch7-font-family;
+    padding: .4em .6em;
+    margin: 1em 0 1em;
+    -webkit-border-radius: 3px;
+       -moz-border-radius: 3px;
+            border-radius: 3px;
+    border: 1px solid darken(@color-swatch2,10%);
+
+    font-family: @font-swatch-font-family;
     font-size: @font-swatch7-font-size;
-    color: @font-swatch7-color;
-    background-color: @color-swatch3;
-    padding: 8px 10px;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
-    border: none;
+    font-weight:@font-swatch7-font-weight;
+    background-color: @color-swatch2;
+    color: @color-swatch4;
+    text-decoration: none;
+    letter-spacing: 1px;
 }
 
-.widget.contactform fieldset button.btn:hover {
+.widget.contactform fieldset button.btn:hover 
+{
+    background-color: lighten(@color-swatch2,5%);
     cursor: pointer;
-    background-color: darken(@color-swatch3,5%);
 }
 
 .widget.contactform fieldset button.btn.justifyleft
@@ -984,10 +990,10 @@ footer section.footer2 .widget.responsivecolumns p {
     background-color: lighten(@color-swatch5,23%);
     color: @font-swatch5-color;
     border: 1px solid lighten(@color-swatch5,10%);
-    padding: 12px 10px 12px 40px;
+    padding: 10px 10px 10px 40px;
     background-image: image('/4494193fb5713a0a8717442ba3249899/images/twitter.png');
     background-repeat: no-repeat;
-    background-position: 10px;
+    background-position: 10px 8px;
     -moz-border-radius: 6px;
     -webkit-border-radius: 6px;
     border-radius: 3px;
@@ -1000,7 +1006,7 @@ footer section.footer2 .widget.responsivecolumns p {
 }
 
 .widget.tweet a:hover, .tweet a:active {
-    background-color: lighten(@color-swatch5,15%);
+    background-color: lighten(@color-swatch5,20%);
     background-image: image('/4494193fb5713a0a8717442ba3249899/images/twitter.png');
     background-repeat: no-repeat;
     background-position: 10px;
@@ -1009,6 +1015,33 @@ footer section.footer2 .widget.responsivecolumns p {
 
 .widget.tweet a:active {
     box-shadow: inset 0 2px 3px rgba(0,0,0,0.1);
+}
+
+/* DESKTOP REDIRECT */
+
+.widget.redirecttodesktop {
+    padding: 8px 0;
+}
+
+.widget.redirecttodesktop a {
+    padding-right: 30px;
+    padding-top: 2px;
+    background-image: image('/4494193fb5713a0a8717442ba3249899/images/desktop.png');
+    background-repeat: no-repeat;
+    background-position: right center;
+    font-size: 12px;
+    text-shadow: 0 1px 0 rgba(255,255,255,.5);
+    text-decoration: none;
+    cursor: pointer;
+
+}
+
+.widget.redirecttodesktop a:hover, .desktop a:active {
+    background-image: image('/yelaudio/images/desktop.png');
+    background-repeat: no-repeat;
+    background-position: right center;
+    cursor: pointer;
+    text-decoration: underline;
 }
 
 
