Updated widgets CSS

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -387,12 +387,7 @@ hr.line.align-right {
 /* Click To Call CSS */
 
 .widget.clicktocall {
-    background-color: @color-swatch3;
-    padding: 16px 10px;
-    margin: 20px 0;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
+    padding: 20px 0;
 }
 
 .widget.clicktocall:hover {
@@ -402,7 +397,9 @@ hr.line.align-right {
 
 .widget.clicktocall a {
   background-image: image('/4494193fb5713a0a8717442ba3249899/images/ic-call.png');
-  padding: .4em .6em;
+  background-position: 10px;
+  background-repeat: no-repeat;
+  padding: 10px 10px 10px 40px;
   margin: 1em 0 1em;
   -webkit-border-radius: 3px;
      -moz-border-radius: 3px;
@@ -1009,7 +1006,7 @@ footer section.footer2 .widget.responsivecolumns p {
     background-color: lighten(@color-swatch5,20%);
     background-image: image('/4494193fb5713a0a8717442ba3249899/images/twitter.png');
     background-repeat: no-repeat;
-    background-position: 10px;
+    background-position: 10px 8px;
     cursor: pointer;
 }
 
@@ -1037,7 +1034,7 @@ footer section.footer2 .widget.responsivecolumns p {
 }
 
 .widget.redirecttodesktop a:hover, .desktop a:active {
-    background-image: image('/yelaudio/images/desktop.png');
+    background-image: image('/4494193fb5713a0a8717442ba3249899/images/desktop.png');
     background-repeat: no-repeat;
     background-position: right center;
     cursor: pointer;
