--- a/stylesheet.less
+++ b/stylesheet.less
@@ -390,11 +390,6 @@ hr.line.align-right {
     padding: 20px 0;
 }
 
-.widget.clicktocall:hover {
-    background-color: darken(@color-swatch3,5%);
-    cursor: pointer;
-}
-
 .widget.clicktocall a {
   background-image: image('/4494193fb5713a0a8717442ba3249899/images/ic-call.png');
   background-position: 10px;
@@ -415,7 +410,7 @@ hr.line.align-right {
   letter-spacing: 1px;
 }
 
-.widget.clicktocall a {
+.widget.clicktocall a:hover {
     background-image: image('/4494193fb5713a0a8717442ba3249899/images/ic-call.png');
     background-color: lighten(@color-swatch2,5%);
     cursor: pointer;
@@ -1046,7 +1041,6 @@ footer section.footer2 .widget.responsivecolumns p {
 
 .widget.socialicons {
     padding: 10px 0;
-    text-align: center;
     font-size: 12px;
     font-family:@font-swatch7-font-family;
 }
@@ -1063,6 +1057,26 @@ footer section.footer2 .widget.responsivecolumns p {
     margin-right: 6px;
     background-repeat: no-repeat;
 }
+
+/* ALIGN LEFT */
+.widget.socialicons .align-left {
+    text-align: left;
+}
+
+/* ALIGN RIGHT */
+.widget.socialicons .align-right {
+    text-align: right;
+}
+
+.widget.socialicons .align-center {
+    text-align: center;
+}
+
+/* ALIGN CENTER */
+.widget.extendednavigation ul.align-left li:hover ul li {
+    text-align: center;
+}
+
 .widget.socialicons span.bk-socialicons-twitter a {
     background-image: image('/4494193fb5713a0a8717442ba3249899/images/socialicons-twitter.png')
 }
@@ -1076,7 +1090,7 @@ footer section.footer2 .widget.responsivecolumns p {
 }
 
 .widget.socialicons span.bk-socialicons-rss a {
-    background-image: image('/4494193fb5713a0a8717442ba3249899/images/socialicons-rssfeed.png');
+    background-image: image('/4494193fb5713a0a8717442ba3249899/images/socialicons-rss.png');
 }
 
 .widget.socialicons span.bk-socialicons-googleplus a {
@@ -1085,6 +1099,96 @@ footer section.footer2 .widget.responsivecolumns p {
 
 .widget.socialicons span.bk-socialicons-youtube a {
     background-image: image('/4494193fb5713a0a8717442ba3249899/images/socialicons-youtube.png');
+}
+
+
+/* SLIDESHOW */
+
+.slideshow-widget .btn-prev, .slideshow-widget .btn-next
+{
+  display: none;
+  position: absolute;
+  width: 14%;
+  height: 14%; 
+  font-size: 0;
+  z-index: 11;
+  text-indent: -99999px;  
+}
+
+.slideshow-widget .btn-prev
+{
+  left: 10px;
+  background: image('/4494193fb5713a0a8717442ba3249899/images/slideshow-arrow-left.png') no-repeat center left;
+  background-size: contain;
+}
+
+.slideshow-widget .btn-next
+{
+  right: 10px;
+  background: image('/4494193fb5713a0a8717442ba3249899/images/slideshow-arrow-right.png') no-repeat center right; 
+    background-size: contain;   
+}
+
+.slideshow-widget:hover .btn-prev, .slideshow-widget:hover .btn-next
+{
+  top: 43%;
+  display: block;
+  cursor: pointer;
+}
+
+.slideshow-widget-controls
+{
+  margin-top: 10px;
+  text-align: center;
+}
+
+.slideshow-empty {
+    padding: 10px;
+}
+
+.slideshow-widget .btn-play
+{
+  display: none;
+  position: absolute;
+  cursor: pointer;
+  z-index: 10;
+  background: image('/4494193fb5713a0a8717442ba3249899/images/slideshow-play.png') center no-repeat;
+  background-size: 100%;
+  width: 14%;
+  height: 14%;
+  top: 43%;
+  left: 43%;
+}
+
+.slideshow-widget:hover .btn-play
+{
+  display:block;
+}
+
+.slideshow-widget:hover .btn-play.pause
+{
+  background: image('/4494193fb5713a0a8717442ba3249899/images/slideshow-pause.png') center no-repeat;
+  background-size: 100%;  
+}
+
+.slideshow-widget-controls .dot
+{
+  width: 14px;
+  height: 14px;
+  line-height: 14px;
+  display: inline-block;
+  background: image('/4494193fb5713a0a8717442ba3249899/images/slideshow-dot-not-selected.png') center no-repeat;
+}
+
+.slideshow-widget-controls .dot.selected
+{
+  background: image('/4494193fb5713a0a8717442ba3249899/images/slideshow-dot-selected.png') center no-repeat;
+}
+
+.slideshow-widget .btn-prev.disabled, .slideshow-widget .btn-next.disabled, .slideshow-widget .btn-play.disabled
+{
+  opacity:0.4;
+  cursor: default;
 }
 
 
