--- a/stylesheet.less
+++ b/stylesheet.less
@@ -854,13 +854,18 @@ footer section.footer2 .widget.responsivecolumns p {
 /* Form CSS */
 
 .widget.contactform form {
-    padding: 0;
-    margin-bottom: 20px;
+    padding: 20px;
+    margin: 30px 0;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    background-color: lighten(@color-swatch5,23%);
 }
 
 .widget.contactform fieldset {
     border: none;
     padding: 0;
+    margin: 0;
 }
 
 .widget.contactform fieldset label {
@@ -876,13 +881,13 @@ footer section.footer2 .widget.responsivecolumns p {
 }
 
 .widget.contactform fieldset input {
-    height: 40px;
+    height: 44px;
     width: 100%;
-    border: 1px solid lighten(@color-swatch4,60%);
-    font-family: @font-swatch5-font-family;
-    font-size: @font-swatch5-font-size;
-    color: @font-swatch5-color;
-    background-color: lighten(@color-swatch2,50%);
+    border: 1px solid lighten(@color-swatch5,15%);
+    font-family:@font-swatch5-font-family;
+    font-size:@font-swatch5-font-size;
+    font-weight:@font-swatch5-font-weight;
+    color:@font-swatch5-color;
     background-image: image('/4494193fb5713a0a8717442ba3249899/images/form-bg.png');
     background-repeat: repeat;
     -webkit-border-radius: 4px;
@@ -895,10 +900,16 @@ footer section.footer2 .widget.responsivecolumns p {
 
 .widget.contactform fieldset input.email {
   background-image: image('/4494193fb5713a0a8717442ba3249899/images/form-ic-email.png');
+  background-repeat: no-repeat;
+  text-indent: 30px;
+  background-position: 0 16px;
 }
 
-.widget.contactform fieldset input.message {
+.widget.contactform fieldset textarea.message {
   background-image: image('/4494193fb5713a0a8717442ba3249899/images/form-ic-message.png');
+  background-repeat: no-repeat;
+  text-indent: 30px;
+  background-position: 0 16px;
 }
 
 .widget.contactform fieldset textarea {
