--- a/stylesheet.less
+++ b/stylesheet.less
@@ -893,7 +893,7 @@ footer section.footer2 .widget.responsivecolumns p {
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-    text-indent: 8px;
+    text-indent: 50px;
     margin-top: 6px;
     margin-bottom: 30px;
 }
@@ -902,24 +902,24 @@ footer section.footer2 .widget.responsivecolumns p {
   background-image: image('/4494193fb5713a0a8717442ba3249899/images/form-ic-email.png');
   background-repeat: no-repeat;
   text-indent: 30px;
-  background-position: 0 16px;
+  background-position: 13px 19px;
 }
 
 .widget.contactform fieldset textarea.message {
   background-image: image('/4494193fb5713a0a8717442ba3249899/images/form-ic-message.png');
   background-repeat: no-repeat;
   text-indent: 30px;
-  background-position: 0 16px;
+  background-position: 10px 16px;
+  margin-bottom: 2px;
 }
 
 .widget.contactform fieldset textarea {
     height: 100px;
     width: 100%;
-    border: 1px solid lighten(@color-swatch4,60%);
+    border: 1px solid lighten(@color-swatch5,15%);
     font-family: @font-swatch5-font-family;
     font-size: @font-swatch5-font-size;
     color: @font-swatch5-color;
-    background-color: lighten(@color-swatch2,50%);
     background-image: image('/4494193fb5713a0a8717442ba3249899/images/form-bg.png');
     background-repeat: repeat;
     -webkit-border-radius: 2px;
