--- a/about.twig
+++ b/about.twig
@@ -4,7 +4,7 @@
 
  <header>
     <div class="wrapper clearfix">
-       {{widget('companyheader', 'companyheader', {"defaultlogo": asset('hatch/images/egg.png')})|raw}}
+       {{widget('companyheader', 'companyheader', {"defaultlogo": asset('images/logo.png')})|raw}}
        {{widget('extendednavigation', 'navigationheader', {})|raw}}
     </div>
 </header>
