--- a/stylesheet.less
+++ b/stylesheet.less
@@ -163,7 +163,7 @@ section.light-bg {
           border-radius: 3px;
   border: 1px solid darken(@color-swatch2,10%);
 
-  font-family: @font-swatch-font-family;
+  font-family: @font-swatch-font7-family;
   font-size: @font-swatch7-font-size;
   font-weight:@font-swatch7-font-weight;
   background-color: @color-swatch2;
@@ -403,7 +403,7 @@ hr.line.align-right {
           border-radius: 3px;
   border: 1px solid darken(@color-swatch2,10%);
 
-  font-family: @font-swatch-font-family;
+  font-family: @font-swatch-font7-family;
   font-size: @font-swatch7-font-size;
   font-weight:@font-swatch7-font-weight;
   background-color: @color-swatch2;
@@ -947,7 +947,7 @@ footer section.footer2 .widget.responsivecolumns p {
             border-radius: 3px;
     border: 1px solid darken(@color-swatch2,10%);
 
-    font-family: @font-swatch-font-family;
+    font-family: @font-swatch-font7-family;
     font-size: @font-swatch7-font-size;
     font-weight:@font-swatch7-font-weight;
     background-color: @color-swatch2;
