Added height to the bgImage class in the feature widget

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -706,7 +706,12 @@ footer section.footer2 .widget.responsivecolumns p {
 .widget.feature {
   width: 100%;
   margin-bottom: 0em;
-  height: 539px!important;
+  height: 539px;
+}
+
+.widget.feature .bgimage
+{
+  height: 539px;
 }
 
 .widget.feature .content {
