Updated the responsive css to be more responsive

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1291,8 +1291,24 @@ footer section.footer2 .widget.responsivecolumns p {
 
   /* FEATURE */
 
+  .widget.feature {
+    height:235px;
+  }
+
+  .widget.feature .bgImage {
+    height:235px;
+  }
+
+  .widget.feature .content .strip {
+    padding: 0.8em 0;
+  }
+
   .widget.feature h2 {
-    font-size: 2em;
+    font-size: 1.6em;
+  }
+
+  .widget.feature h3 {
+    font-size: 0.8em;
   }
 
   .widget.feature button {
@@ -1316,6 +1332,10 @@ footer section.footer2 .widget.responsivecolumns p {
   section.bottom-bar p {
     line-height: 1.4em;
     padding-top: 1em;
+  }
+
+  .widget.responsivecolumns {
+    margin: 2em 0em;
   }
 
   /* FOOTER */
@@ -1401,11 +1421,26 @@ footer section.footer2 .widget.responsivecolumns p {
 
   /* FEATURE */
 
-  .widget.feature .content {
+  .widget.feature {
+    height:100px;
+  }
+
+  .widget.feature .bgImage {
+    height:100px;
   }
 
   .widget.feature .content .strip {
-    padding: 1.1em 0;
+    padding: 0.6em 0;
+  }
+
+  .widget.feature h2 {
+    font-size: 1.4em;
+    text-align:center;
+    padding:0;
+  }
+
+  .widget.feature h3 {
+    display:none;
   }
 
   .widget.feature button {
@@ -1448,6 +1483,9 @@ footer section.footer2 .widget.responsivecolumns p {
     width: 96%;
   }
 
+  .widget.responsivecolumns {
+    margin: 1em 0em;
+  }
 }
 
 @media only screen and (min-width: 1140px) {
