--- a/default.twig
+++ b/default.twig
@@ -13,7 +13,7 @@
     {{widget('feature', 'featurehome', {"header": "Point of interest marketing.", "strapline":"Ut urna ipsum pulvinar vitae sagittis in placerat ac nulla.", "buttonText":"LORE IPSUM", "bgImg": asset('images/feature-bg.jpg')})|raw}}
 </section>
 
-<div class="main">
+<div class="main wrapper clearfix">
     {{zone('main')|raw}}
 </div>
 
