--- a/stylesheet.less
+++ b/stylesheet.less
@@ -29,7 +29,7 @@ h1, h2, h3, h4, h5, p {
 h1 {
   font-family:@font-swatch1-font-family;
   font-weight: @font-swatch1-font-weight;
-  color:@font-swatch1-color;
+  color:@color-swatch1;
   line-height:@font-swatch1-line-height;
   letter-spacing: @font-swatch1-letter-spacing;
   font-size: @font-swatch1-font-size;
@@ -41,7 +41,7 @@ h2
   font-size: @font-swatch2-font-size;
   font-weight: @font-swatch2-font-weight;
   line-height:@font-swatch2-line-height;
-  color: @font-swatch2-color;
+  color: @color-swatch1;
   letter-spacing: @font-swatch2-letter-spacing;
 }
 
@@ -50,7 +50,7 @@ h3
   font-family:@font-swatch3-font-family;
   font-size:@font-swatch3-font-size;
   font-weight: @font-swatch3-font-weight;
-  color: @font-swatch3-color;
+  color: @color-swatch1;
   line-height:@font-swatch3-line-height;
   letter-spacing: @font-swatch3-letter-spacing;
 }
@@ -61,7 +61,7 @@ h4
   font-size:@font-swatch4-font-size;
   font-weight:@font-swatch4-font-weight;
   line-height:@font-swatch4-line-height;
-  color:@font-swatch4-color;
+  color: @color-swatch1;
   letter-spacing: @font-swatch4-letter-spacing;
 }
 
