--- a/stylesheet.less
+++ b/stylesheet.less
@@ -121,7 +121,7 @@ section.main {
 
 header {
   padding: 20px 0;
-  /*background-color: @color-swatch7;*/
+  background-color: @color-swatch7;
 }
 
 .widget.companyheader .company-name h1 {
@@ -280,6 +280,8 @@ footer span {
   text-align: right;
 }
 
+
+
 .widget.extendednavigation ul li {
   float: left;
   display: block;
@@ -415,7 +417,7 @@ footer span {
   -webkit-border-radius: 2px;
      -moz-border-radius: 2px;
           border-radius: 2px;
-  background-color: hsla(hue(@color-swatch7), saturation(@color-swatch7), lightness(@color-swatch7), 0.9); 
+  background-color: hsla(hue(@color-swatch4), saturation(@color-swatch4), lightness(lighten(@color-swatch4,10%)), 0.9); 
 
   font-family:@font-swatch8-font-family;
   font-size:(@font-swatch8-font-size * 0.8); /* 40px  */
@@ -434,7 +436,7 @@ footer span {
      -moz-border-radius: 2px;
           border-radius: 2px;
   margin-bottom: 10px;
-  background-color: hsla(hue(@color-swatch7), saturation(@color-swatch7), lightness(@color-swatch7), 0.9); 
+  background-color: hsla(hue(@color-swatch4), saturation(@color-swatch4), lightness(lighten(@color-swatch4,10%)), 0.9); 
 
   font-family:@font-swatch9-font-family;
   font-size:(@font-swatch9-font-size * 0.6); /* 35px  */
@@ -1610,6 +1612,3 @@ hr.line.align-right {
 .clearfix {
   *zoom: 1;
 }
-
-
-
