--- a/stylesheet.less
+++ b/stylesheet.less
@@ -111,7 +111,7 @@ blockquote {
    CUSTOM CSS
    =============================== */
 
-section.main {
+.main {
   padding: 40px 0;
 }
 
@@ -1277,7 +1277,7 @@ hr.line.align-right {
     display: table-cell !important;
     float: none!important;
     padding: 0.6em;
-    background-color: lighten(@color-swatch5,20%);
+    background-color: lighten(@color-swatch5,17%);
     border-left: 14px solid @color-swatch1;
   }
 
@@ -1331,7 +1331,7 @@ hr.line.align-right {
 
   /* OTHER */
 
-  section.main {
+  .main {
     padding: 50px 0;
   }
 
