--- a/default.twig
+++ b/default.twig
@@ -10,7 +10,7 @@
 </header>
 
 <section>
-    {{widget('feature', 'featurehome', {"header": "Point of interest marketing.", "strapline":"Ut urna ipsum pulvinar vitae sagittis in placerat ac nulla.", "buttonText":"LORE IPSUM", "bgImg": asset('images/feature-bg.jpg')})|raw}}
+    {{widget('feature', 'featurehome', {"header": "Creative Ideas. Common Results.", "strapline":"GET INVOLVED TODAY. LET US BUILD YOUR FUTURE - THE PEARL WAY.", "buttonText":"Find out more today →", "originalImageWidth": "1500", 'originalOffsetCenter': '-482', 'defaultBgImg': asset('images/feature-bg.jpg'),"showBtn": true})|raw}}
 </section>
 
 <div class="main wrapper clearfix">
@@ -24,6 +24,8 @@
                 {{widget('content', 'footercolumn1', {"content":"<h2>Lorem Ip Soda</h2><p>Integer a Tortor Dui. Nullam nec ante mi. Morbi sodales urna sit amet mauris elementum quis rutrum lacus gravida. Proin feugia libero quis.</p>"})|raw}}
             </div>
             <div class="column columns-two-right">
+                {{widget('content', 'footercolumn2', {"content":"<h2>Aliquam Sodales</h2><p>Copyright © 2013. All Rights Reserved.</p>"})|raw}}
+
                 {{widget('socialicons', 'socialicons', {'googleplus': 'https://plus.google.com/101946323226233111530', 'linkedin':'http://www.linkedin.com/company/basekit', 'facebook': 'https://www.facebook.com/TeamBaseKit', 'twitter': 'https://twitter.com/basekit', 'youtube': 'https://www.youtube.com/user/TeamBaseKit', 'rss': 'http://blogdiseno.basekit.es/feed/'})|raw}}
             </div>
         </div>
