Updated twig files

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -431,7 +431,7 @@ footer span {
 
 .widget.feature h3 {
   display: inline-block;
-  padding: 0px 12px;
+  padding: 12px;
   -webkit-border-radius: 2px;
      -moz-border-radius: 2px;
           border-radius: 2px;
