--- a/default.twig
+++ b/default.twig
@@ -10,7 +10,7 @@
 </header>
 
 <section>
-    {{widget('feature', 'featurehome', {"header": "CREATIVE IDEAS. COMMON RESULTS.", "strapline":"GET INVOLVED TODAY. LET US BUILD YOUR FUTURE - THE PEARL WAY.", "buttonText":"Find out more today →", "originalImageWidth": "1500", 'originalOffsetCenter': '-482', 'defaultBgImg': asset('images/feature-bg.jpg'),"showBtn": true})|raw}}
+    {{widget('feature', 'featurehome', {"header": "CREATIVE IDEAS. COMMON RESULTS.", "strapline":"GET INVOLVED TODAY. LET US BUILD YOUR FUTURE - THE PEARL WAY.", "buttonText":"Find out more today →","defaultBgImg": asset('images/feature-bg.jpg'), 'positionTopPercentage': '50','showBtn': true})|raw}}
 </section>
 
 <div class="main wrapper clearfix">
