--- a/stylesheet.less
+++ b/stylesheet.less
@@ -280,8 +280,6 @@ footer span {
   text-align: right;
 }
 
-
-
 .widget.extendednavigation ul li {
   float: left;
   display: block;
@@ -386,39 +384,35 @@ footer span {
    FEATURE
    =============================== */
 
-.widget.feature {
-  height: auto;
+ .widget.feature {
+  display: table;
 }
 
-.widget.feature .bgimage {
-  height: 600px;
-}
+.widget.feature .feature-bgimg {
+  height: 500px; /* should be in media query*/
+ }
 
 .widget.feature .content {
-  margin: 0 auto;
-  padding: 8em 0;
+  height: 500px;
   text-align: center;
-  position: absolute;
-  top: 0;
-}
-
-.widget.feature .content .spare {
-  max-width: 960px;
-  display: block;
-  margin: 0 auto;
 }
 
 /* FEATURE TITLE */
 
-.widget.feature h2 {
+.widget.feature h2 span, .widget.feature h3 span {
   display: inline-block;
-  padding: 20px;
-  margin-bottom: 10px;
-  -webkit-border-radius: 2px;
-     -moz-border-radius: 2px;
-          border-radius: 2px;
   background-color: hsla(hue(@color-swatch4), saturation(@color-swatch4), lightness(lighten(@color-swatch4,10%)), 0.9); 
+}
 
+.widget.feature h2 span {
+  padding: 20px;
+}
+
+.widget.feature h3 span {
+  padding: 6px 20px;
+}
+
+.widget.feature h2 {
   font-family:@font-swatch8-font-family;
   font-size:(@font-swatch8-font-size * 0.8); /* 40px  */
   font-weight: @font-swatch8-font-weight;
@@ -430,18 +424,10 @@ footer span {
 /* FEATURE STRAPLINE */
 
 .widget.feature h3 {
-  display: inline-block;
-  padding: 12px;
-  -webkit-border-radius: 2px;
-     -moz-border-radius: 2px;
-          border-radius: 2px;
-  margin-bottom: 10px;
-  background-color: hsla(hue(@color-swatch4), saturation(@color-swatch4), lightness(lighten(@color-swatch4,10%)), 0.9); 
-
   font-family:@font-swatch9-font-family;
   font-size:(@font-swatch9-font-size * 0.6); /* 35px  */
   font-weight: @font-swatch9-font-weight;
-  line-height:@font-swatch9-line-height;
+  line-height:(@font-swatch9-line-height * 0.55);
   color: @font-swatch9-color;
   letter-spacing: 1px;
   /*letter-spacing: @font-swatch9-letter-spacing;*/
@@ -449,14 +435,9 @@ footer span {
 
 /* FEATURE BUTTON */
 
-.widget.feature .feature-btn {
-  max-width: 960px;
-  display: block;
-  margin: 3em auto;
-}
-
 .widget.feature button
 {
+  margin: 1em 0;
   padding: 12px 18px;
   border: 0;
   -webkit-border-radius: 2px;
@@ -1341,39 +1322,26 @@ hr.line.align-right {
 
   /* FEATURE */
 
-  .widget.feature {
-    height: auto;
-  }
-
-
-  .widget.feature .bgimage {
-    height: 400px;
-  }
+   .widget.feature .feature-bgimg {
+    height: 300px;
+   }
 
   .widget.feature .content {
-    padding: 5em 0;
-    position: absolute;
-    bottom: 0;
-  }
-
-  .widget.feature .content .spare {
-    max-width: 678px;
+    height: 300px;
   }
 
   .widget.feature h2 {
-    padding: 20px;
     font-size:(@font-swatch8-font-size * 0.5); /* 25px */
     line-height:(@font-swatch8-line-height * 0.8); /* 40px */
+  }
+
+  .widget.feature h2 span {
+    padding: 10px;
   }
 
   .widget.feature h3 {
     font-size:(@font-swatch9-font-size * 0.6); /* 40px */
     line-height:(@font-swatch9-line-height * 0.8); /* 40px */
-  }
-
-  .widget.feature .feature-btn {
-    max-width: 678px;
-    margin: 1em auto;
   }
 
   .widget.feature .feature-btn button {
@@ -1487,24 +1455,15 @@ hr.line.align-right {
 
   /* FEATURE */
 
-  .widget.feature {
-    height: auto;
-  }
+  .widget.feature .feature-bgimg {
+    height: 220px; /* should be in media query*/
+   }
 
-  .widget.feature .bgimage {
+  .widget.feature .content {
     height: 220px;
   }
 
-  .widget.feature .content {
-    padding: 4em 0;
-  }
-
-  .widget.feature .content .spare {
-    max-width: 285px;
-  }
-
   .widget.feature h2 {
-    padding: 10px;
     font-size:(@font-swatch8-font-size * 0.4); /* 20px */
     line-height:(@font-swatch8-line-height * 0.5); /* 30px */
   }
