--- a/stylesheet.less
+++ b/stylesheet.less
@@ -120,8 +120,8 @@ header {
 }
 
 .widget.companyheader .company-name h1 {
-  font-size:(@font-swatch1-font-size * 0.6); /* 21.6px  */
-  line-height:(@font-swatch1-line-height * 0.8); /* 28.8px  */
+  font-size:scale(@font-swatch1-font-size, 0.6); /* 21.6px  */
+  line-height:scale(@font-swatch1-line-height, 0.8); /* 28.8px  */
   margin: 0;
   padding: 0;
 }
@@ -181,7 +181,7 @@ footer {
 
 footer h2 {
   color: @color-swatch1;
-  font-size: (@font-swatch2-font-size * 0.9);
+  font-size:scale(@font-swatch2-font-size, 0.9);
   padding-bottom: 20px;
 }
 
@@ -289,7 +289,7 @@ footer span {
   display: block;
   padding: 0;
   font-family:@font-swatch6-font-family;
-  font-size:(@font-swatch6-font-size * 1.2); /* 12.6px  */
+  font-size:scale(@font-swatch6-font-size, 1.2); /* 12.6px  */
   font-weight: @font-swatch6-font-weight;
   color: @font-swatch6-color;
   line-height:@font-swatch6-line-height;
@@ -409,7 +409,7 @@ footer span {
 
 .widget.feature h2 {
   font-family:@font-swatch8-font-family;
-  font-size:(@font-swatch8-font-size * 0.8); /* 40px  */
+  font-size:scale(@font-swatch8-font-size, 0.8); /* 40px  */
   font-weight: @font-swatch8-font-weight;
   line-height:@font-swatch8-line-height;
   color: @font-swatch8-color;
@@ -420,9 +420,9 @@ footer span {
 
 .widget.feature h3 {
   font-family:@font-swatch9-font-family;
-  font-size:(@font-swatch9-font-size * 0.6); /* 35px  */
+  font-size:scale(@font-swatch9-font-size, 0.6); /* 35px  */
   font-weight: @font-swatch9-font-weight;
-  line-height:(@font-swatch9-line-height * 0.55);
+  line-height:scale(@font-swatch9-line-height, 0.55);
   color: @font-swatch9-color;
   letter-spacing: 1px;
   /*letter-spacing: @font-swatch9-letter-spacing;*/
@@ -927,7 +927,7 @@ hr.line.align-right {
     width: 100%;
     float: left;
     font-family:@font-swatch4-font-family;
-    font-size:(@font-swatch4-font-size * 0.8);
+    font-size:scale(@font-swatch4-font-size, 0.8);
     font-weight:@font-swatch4-font-weight;
     line-height:@font-swatch4-line-height;
     color:@font-swatch4-color;
@@ -1215,7 +1215,7 @@ hr.line.align-right {
   }
 
   .widget.companyheader .company-name h1 {
-    font-size:(@font-swatch1-font-size * 0.8);
+    font-size:scale(@font-swatch1-font-size, 0.8);
   }
 
   .widget.companyheader .logo {
@@ -1326,8 +1326,8 @@ hr.line.align-right {
   }
 
   .widget.feature h2 {
-    font-size:(@font-swatch8-font-size * 0.5); /* 25px */
-    line-height:(@font-swatch8-line-height * 0.8); /* 40px */
+    font-size:scale(@font-swatch8-font-size, 0.5); /* 25px */
+    line-height:scale(@font-swatch8-line-height, 0.8); /* 40px */
   }
 
   .widget.feature h2 span {
@@ -1335,8 +1335,8 @@ hr.line.align-right {
   }
 
   .widget.feature h3 {
-    font-size:(@font-swatch9-font-size * 0.6); /* 40px */
-    line-height:(@font-swatch9-line-height * 0.8); /* 40px */
+    font-size:scale(@font-swatch9-font-size, 0.6); /* 40px */
+    line-height:scale(@font-swatch9-line-height, 0.8); /* 40px */
   }
 
   .widget.feature .feature-btn button {
@@ -1354,7 +1354,7 @@ hr.line.align-right {
   /* COMPANY HEADER */
 
   .widget.companyheader .company-name h1 {
-    font-size:(@font-swatch1-font-size * 0.6)
+    font-size:scale(@font-swatch1-font-size, 0.6)
   }
 
   /* NAV */
@@ -1459,8 +1459,8 @@ hr.line.align-right {
   }
 
   .widget.feature h2 {
-    font-size:(@font-swatch8-font-size * 0.4); /* 20px */
-    line-height:(@font-swatch8-line-height * 0.5); /* 30px */
+    font-size:scale(@font-swatch8-font-size, 0.4); /* 20px */
+    line-height:scale(@font-swatch8-line-height, 0.5); /* 30px */
   }
 
   .widget.feature h3 {
