Updated the default gallery CSS in the template to get it working off the bat

--- a/home.twig
+++ b/home.twig
@@ -9,6 +9,10 @@
     </div>
 </header>
 
+<section>
+    {{widget('feature', 'featurehome', {"header": "CREATIVE IDEAS. COMMON RESULTS.", "strapline":"GET INVOLVED TODAY. LET US BUILD YOUR FUTURE - THE PEARL WAY.", "buttonText":"Find out more today →","defaultBgImg": asset('images/feature-bg.jpg'), 'positionTopPercentage': '50','showBtn': true})|raw}}
+</section>
+
 <div class="main wrapper clearfix">
     {{zone('main')|raw}}
 </div>
