Roundered the corners off the gallery widget

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -681,6 +681,7 @@ footer span {
     padding:10px;
     list-style: none;
     background-color: lighten(@color-swatch2,50%);
+    border-radius:5px;
 }
 
 .widget.gallery li {
